/*
 * $Id: ChangeLog,v 1.217 2002/05/14 00:45:15 lculik Exp $
 */

/* Use this format for the entry headers:
   YYYY-MM-DD HH:MM UTC[-|+]hhmm Your Full Name <your_email@address>
   For example:
   2002-12-01 23:12 UTC+0100 Foo Bar <foo.bar@foobar.org>
*/

2002-05-14 09:41 UTC-0800 Ron Pinkas <ron@ronpinkas.com>
   * include/hbexprb.c
     * Minor correction to handling of HB_P_ARRAYPOP ( reset of HB_ET_VARREF )

2002-05-13 21:50 UTC-0300 Luiz Rafael Culik <culikr@uol.com.br>
 * utils/hbmake/hbmake.prg
    % Optimized The Code
    ! New text Formating
    + Support for Roberto's Minigui
    + Internationalization Started
 * utils/hbmake/hbmutils.prg
    * Minor fix

2002-05-13 13:10 UTC-0300 Walter Negro <anegro@overnet.com.ar>
  * source/rtl/menuto.prg
    ! Fix, initial value was not used.
      Reported by Horacio Roldan.

2002-05-12 10:55 UTC-0800 Ron Pinkas <ron@ronpinkas.com>
  * source/compiler/harbour.sly
    * Removed redundant ElemList, replaced with ArgList.

  * source/macro/macro.y
    * Corrected <Array> to support Elements ByRef.

  * source/vm/arrays.c
    * Corrected hb_arraySet() to correctly handlke assignment into BYREF Elements.

2002-05-11 22:38 UTC-0800 Ron Pinkas <ron@ronpinkas.com>
   * tests/pp.prg
   * tests/pp_harb.ch
     + Added support for MiniGUI

   /*
    Note: You need to use -dMINIGUI to enable the support.
        : xBaseScript can now run MiniGUI demo.prg.
   */

2002-05-11 13:02 UTC-0800 Ron Pinkas <ron@ronpinkas.com>
   * tests/pp.prg
     + Added explicit logic for Empty( sWorkLine ) under sucessful match IF section.
     /* Not all sublogic fully tested yet. */

2002-05-10 17:47 UTC-0800 Ron Pinkas <ron@ronpinkas.com>
   * source/rtl/win32ole.prg
     + Now allows return parameter to return OLE object.
     + Added support for SQL NULL.
     - Removed the need for :End() deinitialization is automated.

   * tests/pp.prg
     + Added (under #ifdef WIN): EXTERN CreatObject

   * tests/testole.prg
     - Removed :End() calls.
