@@ -1,5 +1,5 @@
 /*
- * $Id: ChangeLog,v 1.217 2002/05/14 00:45:15 lculik Exp $
+ * $Id: ChangeLog,v 1.218 2002/05/14 16:43:52 ronpinkas Exp $
  */
 
 /* Use this format for the entry headers:
@@ -7,6 +7,10 @@
    For example:
    2002-12-01 23:12 UTC+0100 Foo Bar <foo.bar@foobar.org>
 */
+
+2002-05-14 21:50 UTC-0300 Luiz Rafael Culik <culikr@uol.com.br>
+ * source/rtl/console.c
+   ! fix for printing on Windows when an Set printer to Win:xxx is issued
 
 2002-05-14 09:41 UTC-0800 Ron Pinkas <ron@ronpinkas.com>
    * include/hbexprb.c
